  more information.

Misc:

- Charm++ now builds with CMake by default when using the `./build`
  script (requires CMake version 3.4 or higher). The old build system is
  still available by using `./buildold`. Please see
  https://charm.readthedocs.io/en/latest/charm++/manual.html#installation-with-cmake
  for more information.

- We have adopted GitHub discussions
  (https://github.com/UIUC-PPL/charm/discussions) as the preferred
  venue for Charm++ questions and discussions instead of the
  charm@cs.illinois.edu mailing list.

- Support for Blue Gene/Q targets has been deprecated.

- Charm++ now runs on the new Apple M1 chips with the targets:
  multicore-darwin-arm8, netlrts-darwin-arm8, and mpi-darwin-arm8.

- The BigSim emulator has been removed from Charm++.

- The following unmaintained machine layers have been removed from Charm++:
  * uth (Machine layer that uses user-level threads for execution)
  * sim (Machine layer that simulates a simple message-passing machine with communications processors; based
         on the Dagger simulator)
  * shmem (Machine layer built on top of the OpenSHMEM API)

- The following modules have been removed: ARMCI, Jade, and Charj.

- The 'mpi-linux-mips64' target has been removed.

Charm++ Features & Fixes:

- We have renamed the `VERSION` file to `charm-version.h` and made it compatible
  with C. Charm++ programs that need to check the
  Charm++ version should use the `CHARM_VERSION`, `CHARM_VERSION_MAJOR`,
  `CHARM_VERSION_MINOR`, and `CHARM_VERSION_PATCH` C macros defined when compiling
  a Charm++ application. We also provide a `CHARM_VERSION_GIT` macro for the exact
  git revision of Charm++. In shell scripts, you can determine the version information
  like this: `$ grep "CHARM_VERSION " charm-version.h | awk '{print $3}'`.

- Support for variable sized messages in TRAM.

- Added a pup_buffer API with zero copy functionality.

- Array broadcasts are now node aware, avoiding unnecessary