@@ -6,7 +6,7 @@ set -o nounset
 # Configuration starts here
 
 AUTOBUILD_MACHINE_NAME=${AUTOBUILD_MACHINE_NAME:-$(hostname -s)}
-AUTOBUILD_BRANCH=${AUTOBUILD_BRANCH:-master}
+AUTOBUILD_BRANCH=${AUTOBUILD_BRANCH:-main}
 AUTOBUILD_BUILD_NAME=${AUTOBUILD_BUILD_NAME:-netlrts-linux-x86_64}
 AUTOBUILD_BUILD_OPTS=${AUTOBUILD_BUILD_OPTS:--j8 -g --with-production  --enable-error-checking}
 AUTOBUILD_BUILD_COMMAND=${AUTOBUILD_BUILD_COMMAND:-./build all-test $AUTOBUILD_BUILD_NAME $AUTOBUILD_BUILD_OPTS}
